--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-firebase/app": "^21.6.2",
+    "@react-native-firebase/auth": "^21.6.2",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
@@ -18,6 +21,7 @@
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-axios": "^0.17.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "^3.16.7",
