--- a/package.json
+++ b/package.json
@@ -7,26 +7,30 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "server": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-firebase/app": "^21.6.2",
     "@react-native-firebase/auth": "^21.6.2",
     "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-gesture-handler": "^2.22.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
