--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "firebase": "^11.1.0",
     "react": "18.3.1",
     "react-native": "0.75.4",
