--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "firebase": "^11.1.0",
+    "iconsax-react-native": "^0.0.8",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-axios": "^0.17.1",
