--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "iconsax-react-native": "^0.0.8",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-animatable": "^1.4.0",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.22.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
-    "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
