--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-flash-message": "^0.4.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-safe-area-context": "^5.1.0",
