--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "react-native": "0.75.4",
     "react-native-animatable": "^1.4.0",
     "react-native-axios": "^0.17.1",
+    "react-native-bootsplash": "^6.3.3",
     "react-native-dotenv": "^3.4.11",
     "react-native-flash-message": "^0.4.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
     "react-native-svg": "^15.11.1",
